Convert RunTask to JavaExec task